attempt to fix lightbox scrolling on ios

--- a/wp-content/themes/eye-faster/_/components/sass/_base.scss
+++ b/wp-content/themes/eye-faster/_/components/sass/_base.scss
@@ -576,12 +576,14 @@ header {
 }
 #vgallery {
 	height: auto;
-  max-height: 90vh;
 	padding: 20px 0;
   
   .content-holder {
     max-height: 80vh;
     overflow: scroll; 
+    position: relative;
+    max-height: calc(80vh - 95px);
+    overflow: scroll;
   }
   .embed_wrapper {
     position: relative;
